First attempt at code quality refactor.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,14 +1,13 @@
 # Non-pinned requirements file
 bandit
-black
 click
 colorama
 jinja2
 mypy
+ruff
 nox
 openpyxl
 pandas
-pylama
 pytest
 pytest-cov
 xlrd
