--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # Requirements file, statically pinned for now
 bandit==1.7.4
-black==22.3.0
+bandit[toml]==1.7.4
 click>=7.1,<8.2
 colorama==0.4.4
 jinja2==3.1.1
-mypy==0.942
+mypy==1.10.0
 nox==2022.1.7
 openpyxl==3.0.9
 pandas==1.4.1
-pylama==8.3.8
 pytest==7.1.1
 pytest-cov==3.0.0
+ruff==0.4.2
 xlrd==2.0.1
 yamllint==1.26.3
 data-science-types==0.2.23
